// Copyright 2015, gRPC Authors
// All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
package gedit.user;

option java_multiple_files = true;
option java_package = "com.github.conanchen.gedit.user.profile.grpc";
option java_outer_classname = "UserProfileProto";
option objc_class_prefix = "USRPROF";

import "gedit/common.proto";

// The UserProfile service definition.
service UserProfileApi {

    rpc Get (GetRequest) returns (UserProfileResponse) {
    }

    rpc FindByMobile (FindByMobileRequest) returns (UserProfileResponse) {
    }

    rpc List (ListRequest) returns (stream UserProfileResponse) {
    }

    rpc UpdateMyProfile (UpdateMyProfileRequest) returns (UpdateMyProfileResponse) {
    }

    rpc GetMyProfile (GetMyProfileRequest) returns (UserProfileResponse) {
    }

    rpc Ban (BanUserRequest) returns (BanUserResponse) {
    }
}


message BanUserResponse {
    Status status = 999;
    string uuid = 1;
}

message GetMyProfileRequest{

}

message ListRequest {
    int32 page = 1;
}

message GetRequest {
    string uuid = 1;
}

message BanUserRequest {
    string uuid = 1;
    bool active = 2;
}
message BanResponse {
    Status status = 999;
    string uuid = 1;
    bool active = 2;
}

message FindByMobileRequest {
    string mobile = 1;
}

message UserProfileResponse {
    Status status = 999;
    UserProfile userProfile = 1;
}

message UserProfile {
    string uuid = 1;
    string mobile = 2;
    string username = 3;
    string desc = 4;
    string logo = 5;
    string districtUuid = 9;
    ListString photos = 11;
    bool active = 59;
}


message UpdateMyProfileRequest {
    //只支持单项修改
    oneof property {
        string mobile = 2;
        string username = 3;
        string desc = 4;
        string logo = 5;
        string districtUuid = 9;
        ListString photos = 11;
        bool active = 59;
    }
}

message UpdateMyProfileResponse {
    Status status = 999;
}